# minigrad_cuda

./: 1.py  2.py  README.md  dataset.py  example.cpp  fashion_mnist_model.pth  mnist.py  mnist_cnn_gui_main.py  mnist_model.pth  ops_test.py  optim.py  test.py  v0.py
minigrad/: optim.py  tensor.py
minigrad/nn/: Module.py
minigrad/nn/ops/: CMakeLists.txt
minigrad/nn/ops/src/: compile.sh  conv2d_wrapper.cpp  conv2dv2.cu
minigrad/nn/ops/src/conv2d/: conv2d.cu  conv2d.cuh  conv2d_wrapper.cpp
minigrad/nn/ops/src/matadd/: matadd.cu  matadd.cuh  matadd_wrapper.cpp
minigrad/nn/ops/src/matmul/: matmul.cu  matmul.cuh  matmul_wrapper.cpp
minigrad/nn/ops/src/pooling/: pooling.cu  pooling.cuh  pooling_wrapper.cpp
nn/: Module.py  backward_function.py  ops.py
nn/ops/src/: backup.cu  common.cuh  compile.sh  conv2d  conv2d.cu  conv2d.cuh  conv2d_wrapper.cpp  mat_mul  mat_mul.cu  mat_mul.cuh  mat_mul_wrapper.cpp
